@@ -1,3 +1,9 @@
+2005-05-25  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/procman.h:
+	* src/proctable.c: (proctable_free_info), (remove_info_from_list),
+	(get_info): ProcInfo::children is now GSList.
+
 2005-05-23  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/memmaps.c: (ghashtable_clear_callback), (ghashtable_clear),
